// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[NewFolder] Scanning files should save a new entry - root 1`] = `
Array [
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "newAlbum",
    "id": 1,
    "inode": "Zmlyc3RuZXdBbGJ1bQ==",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyZmlyc3Q=",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyc2Vjb25k",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./second",
      "id": 1,
      "source": "second",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
]
`;

exports[`[NewFolder] Scanning files should save a new entry - sub-album 1`] = `
Array [
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "album/newAlbum",
    "id": 1,
    "inode": "YWxidW1uZXdBbGJ1bQ==",
    "parentDir": "album",
    "photos": Array [],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyZmlyc3Q=",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyc2Vjb25k",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./second",
      "id": 1,
      "source": "second",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
]
`;

exports[`[NewFolder] Scanning files should save a new entry - sub-sub-album 1`] = `
Array [
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "album1/album2/album3/album4/newAlbum",
    "id": 1,
    "inode": "YWxidW00bmV3QWxidW0=",
    "parentDir": "album1/album2/album3/album4",
    "photos": Array [],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyZmlyc3Q=",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyc2Vjb25k",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./second",
      "id": 1,
      "source": "second",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
]
`;
